fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -2,7 +2,7 @@
   "New API key": "Nueva clave API",
   "Delete": "Eliminar",
   "Revoke": "Revocar",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "Revocar clave de la API",
   "Revoke token": "Revocar token",
   "Open collection": "Abrir colección",
   "New collection": "Nueva colección",
@@ -40,8 +40,8 @@
   "Copy ID": "Copiar ID",
   "Clear IndexedDB cache": "Borrar caché de IndexedDB",
   "IndexedDB cache cleared": "Caché de IndexedDB borrado",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "Borrar almacenamiento local",
+  "Local storage cleared": "Almacenamiento local borrado",
   "Toggle debug logging": "Activar/Desactivar registro de depuración",
   "Debug logging enabled": "Registro de depuración activado",
   "Debug logging disabled": "Registro de depuración desactivado",
@@ -108,8 +108,8 @@
   "Leave document": "Abandonar documento",
   "You have left the shared document": "Has abandonado el documento compartido",
   "Could not leave document": "No se pudo abandonar el documento",
-  "Apply template": "Apply template",
-  "Disconnect analytics": "Disconnect analytics",
+  "Apply template": "Aplicar plantilla",
+  "Disconnect analytics": "Desconectar analítica",
   "Home": "Inicio",
   "Drafts": "Borradores",
   "Search": "Buscar",
@@ -133,7 +133,7 @@
   "Archive all notifications": "Archivar todas las notificaciones",
   "New App": "Nueva aplicación",
   "New Application": "Nueva solicitud",
-  "This version of the document was deleted": "This version of the document was deleted",
+  "This version of the document was deleted": "Esta versión del documento ha sido eliminada",
   "Link copied": "Enlace copiado",
   "Dark": "Oscuro",
   "Light": "Claro",
@@ -142,7 +142,7 @@
   "Change theme": "Cambiar tema",
   "Change theme to": "Cambiar tema a",
   "Share link copied": "Enlace para compartir copiado",
-  "Go to collection": "Go to collection",
+  "Go to collection": "Ir a la colección",
   "Go to document": "Ir al documento",
   "Revoke link": "Revocar enlace",
   "Share link revoked": "Enlace para compartir revocado",
@@ -182,7 +182,7 @@
   "Public document sharing": "Compartir documentos públicamente",
   "Allow documents within this collection to be shared publicly on the internet.": "Permitir que los documentos de esta colección sean compartidos públicamente en Internet.",
   "Commenting": "Comentando",
-  "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Allow commenting on documents within this collection.": "Permitir comentarios sobre documentos dentro de esta colección.",
   "Saving": "Guardando",
   "Save": "Guardar",
   "Creating": "Creando",
@@ -211,8 +211,8 @@
   "Install now": "Instalar ahora",
   "Disconnect": "Desconectar",
   "Disconnecting": "Desconectando",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "¿Estás seguro de que quieres desconectar la integración <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "Esto dejará de enviar eventos analíticos a la instancia configurada.",
   "Deleted Collection": "Colección Eliminada",
   "Untitled": "Sin título",
   "Unpin": "Desfijar",
@@ -257,10 +257,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Lo sentimos, parte de la aplicación no pudo ser cargada. Esto puede deberse a que se actualizó desde que abriste la pestaña o debido a una solicitud de red fallida. Por favor intenta recargar la página.",
   "Reload": "Recargar",
   "Something Unexpected Happened": "Ha ocurrido algo inesperado",
-  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "Se ha producido un error varias veces recientemente. Si continúa, por favor intenta limpiar la caché o probar con un navegador diferente.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Lo sentimos, se ha producido un error irrecuperable{{notified}}. Intenta recargar la página, pudo haber sido un error temporal.",
   "our engineers have been notified": "nuestros ingenieros han sido notificados",
-  "Clear cache + reload": "Clear cache + reload",
+  "Clear cache + reload": "Limpiar caché + recargar",
   "Show detail": "Mostrar detalle",
   "{{userName}} archived": "{{userName}} ha archivado",
   "{{userName}} restored": "{{userName}} ha restaurado",
@@ -281,8 +281,8 @@
   "You will receive an email when it's complete.": "Recibirás un correo electrónico cuando esté completado.",
   "Include attachments": "Incluir archivos adjuntos",
   "Including uploaded images and files in the exported data": "Incluyendo imágenes y archivos subidos en los datos exportados",
-  "{{count}} more user": "{{count}} more user",
-  "{{count}} more user_plural": "{{count}} more users",
+  "{{count}} more user": "{{count}} usuario más",
+  "{{count}} more user_plural": "{{count}} usuarios más",
   "Filter": "Filtro",
   "No results": "No hay resultados",
   "{{authorName}} created <3></3>": "{{authorName}} ha creado <3></3>",
