--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -40,8 +40,8 @@
   "Copy ID": "Kopieer ID",
   "Clear IndexedDB cache": "Wis IndexedDB-cache",
   "IndexedDB cache cleared": "IndexedDB-cache gewist",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "Lokale opslag wissen",
+  "Local storage cleared": "Lokale opslag gewist",
   "Toggle debug logging": "Debug-logging aan- of uitzetten",
   "Debug logging enabled": "Debug-logging ingeschakeld",
   "Debug logging disabled": "Debug-logging uitgeschakeld",
@@ -257,10 +257,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Sorry, een deel van de toepassing kon niet geladen worden. Dit kan komen doordat het is bijgewerkt sinds het tabblad is geopend of door een mislukt netwerkverzoek. Probeer het opnieuw te laden.",
   "Reload": "Verversen",
   "Something Unexpected Happened": "Er gebeurde iets onverwachts",
-  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "Er is onlangs meerdere keren een fout opgetreden. Probeer de cache te wissen of gebruik een andere browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Sorry, er is een onherstelbare fout opgetreden op{{notified}}. Probeer de pagina opnieuw te laden, dit kan een tijdelijke storing zijn.",
   "our engineers have been notified": "onze technici zijn op de hoogte gebracht",
-  "Clear cache + reload": "Clear cache + reload",
+  "Clear cache + reload": "Cache wissen + herladen",
   "Show detail": "Toon detail",
   "{{userName}} archived": "{{userName}} gearchiveerd",
   "{{userName}} restored": "{{userName}} hersteld",
@@ -605,7 +605,7 @@
   "mentioned you in": "vermeldde je",
   "left a comment on": "liet een reactie achter op",
   "resolved a comment on": "heeft een reactie opgelost op",
-  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
+  "reacted {{ emoji }} to your comment on": "reageerde {{ emoji }} op jouw reactie op",
   "shared": "gedeeld",
   "invited you to": "heeft je uitgenodigd voor",
   "Choose a date": "Kies een datum",
