--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -690,17 +690,17 @@
   "Created": "Aangemaakt",
   "Imported from {{ source }}": "Geïmporteerd van {{ source }}",
   "Stats": "Stats",
-  "{{ number }} minute read": "{{ number }} minute read",
-  "{{ number }} words": "{{ number }} word",
-  "{{ number }} words_plural": "{{ number }} words",
-  "{{ number }} characters": "{{ number }} character",
-  "{{ number }} characters_plural": "{{ number }} characters",
+  "{{ number }} minute read": "{{ number }} minuten leestijd",
+  "{{ number }} words": "{{ number }} woord",
+  "{{ number }} words_plural": "{{ number }} woorden",
+  "{{ number }} characters": "{{ number }} teken",
+  "{{ number }} characters_plural": "{{ number }} tekens",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Geen tekst geselecteerd",
-  "{{ number }} words selected": "{{ number }} word selected",
-  "{{ number }} words selected_plural": "{{ number }} words selected",
-  "{{ number }} characters selected": "{{ number }} character selected",
-  "{{ number }} characters selected_plural": "{{ number }} characters selected",
+  "{{ number }} words selected": "{{ number }} woord geselecteerd",
+  "{{ number }} words selected_plural": "{{ number }} woorden geselecteerd",
+  "{{ number }} characters selected": "{{ number }} teken geselecteerd",
+  "{{ number }} characters selected_plural": "{{ number }} tekens geselecteerd",
   "Contributors": "Bijdragers",
   "Creator": "Maker",
   "Last edited": "Laatst gewijzigd",
@@ -1074,8 +1074,8 @@
   "Mentioned": "Vermeld",
   "Receive a notification when someone mentions you in a document or comment": "Ontvang een melding wanneer iemand je vermeldt in een document of opmerking",
   "Receive a notification when a comment thread you were involved in is resolved": "Ontvang een notificatie wanneer een reactie waar je bij betrokken was is opgelost",
-  "Reaction added": "Reaction added",
-  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
+  "Reaction added": "Reactie toegevoegd",
+  "Receive a notification when someone reacts to your comment": "Ontvang een melding wanneer iemand reageert op jouw reactie",
   "Collection created": "Collectie aangemaakt",
   "Receive a notification whenever a new collection is created": "Ontvang een melding wanneer een nieuwe collectie wordt gemaakt",
   "Invite accepted": "Uitnodiging geaccepteerd",
