Jira chip integration Bitbucket chip integration Date chip implementation Site map implementation Delete action restriction for users -> ui level cursor rules

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -420,6 +420,12 @@
   "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
   "Return to App": "Back to App",
   "Installation": "Installation",
+  "Loading...": "Loading...",
+  "No collections found": "No collections found",
+  "Searching...": "Searching...",
+  "Search collections and documents...": "Search collections and documents...",
+  "Collapse All": "Collapse All",
+  "Expand All": "Expand All",
   "Unstar document": "Unstar document",
   "Star document": "Star document",
   "Template created, go ahead and customize it": "Template created, go ahead and customize it",
@@ -534,6 +540,7 @@
   "Success": "Success",
   "Success notice": "Success notice",
   "Current date": "Current date",
+  "Date picker": "Date picker",
   "Current time": "Current time",
   "Current date and time": "Current date and time",
   "Indent": "Indent",
@@ -749,6 +756,7 @@
   "A workspace admin (<em>{{ suspendedContactEmail }}</em>) has suspended your account. To re-activate your account, please reach out to them directly.": "A workspace admin (<em>{{ suspendedContactEmail }}</em>) has suspended your account. To re-activate your account, please reach out to them directly.",
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
+  "Site Map": "Site Map",
   "Created by me": "Created by me",
   "Weird, this shouldn’t ever be empty": "Weird, this shouldn’t ever be empty",
   "You haven’t created any documents yet": "You haven’t created any documents yet",
@@ -1175,6 +1183,12 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Bitbucket integration is configured and ready to use. You can now:": "Bitbucket integration is configured and ready to use. You can now:",
+  "Paste Bitbucket issue URLs to get rich previews": "Paste Bitbucket issue URLs to get rich previews",
+  "Paste Bitbucket pull request URLs to get rich previews": "Paste Bitbucket pull request URLs to get rich previews",
+  "Use @ mentions to reference Bitbucket issues and pull requests": "Use @ mentions to reference Bitbucket issues and pull requests",
+  "This integration uses app password authentication and is configured at the server level. No additional setup is required.": "This integration uses app password authentication and is configured at the server level. No additional setup is required.",
+  "Bitbucket integration is not configured. Please set the required environment variables (BITBUCKET_USERNAME and BITBUCKET_APP_PASSWORD) and restart the server.": "Bitbucket integration is not configured. Please set the required environment variables (BITBUCKET_USERNAME and BITBUCKET_APP_PASSWORD) and restart the server.",
   "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?": "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?",
   "Something went wrong while authenticating your request. Please try logging in again.": "Something went wrong while authenticating your request. Please try logging in again.",
   "The owner of GitHub account has been requested to install the {{githubAppName}} GitHub app. Once approved, previews will be shown for respective links.": "The owner of GitHub account has been requested to install the {{githubAppName}} GitHub app. Once approved, previews will be shown for respective links.",
@@ -1186,6 +1200,13 @@
   "Add a Google Analytics 4 measurement ID to send document views and analytics from the workspace to your own Google Analytics account.": "Add a Google Analytics 4 measurement ID to send document views and analytics from the workspace to your own Google Analytics account.",
   "Measurement ID": "Measurement ID",
   "Create a \"Web\" stream in your Google Analytics admin dashboard and copy the measurement ID from the generated code snippet to install.": "Create a \"Web\" stream in your Google Analytics admin dashboard and copy the measurement ID from the generated code snippet to install.",
+  "Jira integration is configured and ready to use. You can now:": "Jira integration is configured and ready to use. You can now:",
+  "Paste Jira issue URLs to get rich previews": "Paste Jira issue URLs to get rich previews",
+  "Use @ mentions to reference Jira issues": "Use @ mentions to reference Jira issues",
+  "View issue details including assignee, status, priority, and custom fields": "View issue details including assignee, status, priority, and custom fields",
+  "This integration uses app token authentication and is configured at the server level. No additional setup is required.": "This integration uses app token authentication and is configured at the server level. No additional setup is required.",
+  "<0>Configured fields:</0> Jira assignee, ticket status, OE Application Module Group, OE Application Module, ticket summary, and priority.": "<0>Configured fields:</0> Jira assignee, ticket status, OE Application Module Group, OE Application Module, ticket summary, and priority.",
+  "Jira integration is not configured. Please set the required environment variables (JIRA_URL, JIRA_EMAIL, and JIRA_APP_TOKEN) and restart the server.": "Jira integration is not configured. Please set the required environment variables (JIRA_URL, JIRA_EMAIL, and JIRA_APP_TOKEN) and restart the server.",
   "Whoops, you need to accept the permissions in Linear to connect {{appName}} to your workspace. Try again?": "Whoops, you need to accept the permissions in Linear to connect {{appName}} to your workspace. Try again?",
   "Something went wrong while processing your request. Please try again.": "Something went wrong while processing your request. Please try again.",
   "Enable previews of Linear issues in documents by connecting a Linear workspace to {appName}.": "Enable previews of Linear issues in documents by connecting a Linear workspace to {appName}.",
@@ -1254,6 +1275,5 @@
   "You updated {{ timeAgo }}": "You updated {{ timeAgo }}",
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
-  "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
-  "Error loading data": "Error loading data"
+  "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}"
 }
