fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -1005,7 +1005,7 @@
   "Guest": "Invité",
   "Never used": "Jamais utilisé",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Êtes-vous sûr de vouloir supprimer l'application {{ appName }} ? Cette action est irréversible.",
-  "Title": "Title",
+  "Title": "Titre",
   "Shared by": "Partagé par",
   "Date shared": "Date du partage",
   "Last accessed": "Dernier accès",
@@ -1075,7 +1075,7 @@
   "Receive a notification when someone mentions you in a document or comment": "Recevez une notification lorsque quelqu'un vous mentionne dans un document ou commentaire",
   "Receive a notification when a comment thread you were involved in is resolved": "Recevoir une notification lorsqu'un sujet de commentaire auquel vous avez participé est résolu",
   "Reaction added": "Reaction added",
-  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
+  "Receive a notification when someone reacts to your comment": "Recevoir une notification lorsque quelqu'un réagit à votre commentaire",
   "Collection created": "Collection créée",
   "Receive a notification whenever a new collection is created": "Recevez une notification à chaque fois qu'une nouvelle collection est créée",
   "Invite accepted": "Invitation acceptée",
