--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -316,6 +316,7 @@
   "Change Language": "Change Language",
   "Dismiss": "Dismiss",
   "Lightbox": "Lightbox",
+  "View, navigate or download images contained in the doc": "View, navigate or download images contained in the doc",
   "Close": "Close",
   "You’re offline.": "You’re offline.",
   "Sorry, an error occurred.": "Sorry, an error occurred.",
