fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -325,7 +325,7 @@
   "My App": "Az én alkalmazásom",
   "Tagline": "Jelmondat",
   "A short description": "Rövid leírás",
-  "Callback URLs": "Callback URLs",
+  "Callback URLs": "Visszahívási URL",
   "Published": "Közzétéve",
   "Allow this app to be installed by other workspaces": "Az alkalmazás letöltésének engedélyezése a munkaterület tagjainak",
   "{{ username }} reacted with {{ emoji }}": "{{ username }} a következőt reagálta: {{ emoji }}",
@@ -355,7 +355,7 @@
   "Search engine indexing": "Keresőmotor indexelése",
   "Disable this setting to discourage search engines from indexing the page": "Kapcsold ki ezt a beállítást, hogy megakadályozzd a keresőmotorokat az oldal indexelésében.",
   "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Display the last modified timestamp on the shared page": "Az utolsó módosítás idejének megjelenítése a megosztott oldalon",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Meghívás",
   "{{ userName }} was added to the collection": "{{ userName }} hozzáadva a gyűjteményhez",
