fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -356,28 +356,28 @@
   "Disable this setting to discourage search engines from indexing the page": "Kapcsold ki ezt a beállítást, hogy megakadályozzd a keresőmotorokat az oldal indexelésében.",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Az utolsó módosítás idejének megjelenítése a megosztott oldalon",
-  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
+  "All documents in this collection will be shared on the web, including any new documents added later": "A gyűjteményben található összes dokumentum meg lesz osztva a weben, a jövőben hozzáadott dokumentumokkal együtt",
   "Invite": "Meghívás",
   "{{ userName }} was added to the collection": "{{ userName }} hozzáadva a gyűjteményhez",
   "{{ count }} people added to the collection": "{{ count }} személy hozzáadva a gyűjteményhez",
   "{{ count }} people added to the collection_plural": "{{ count }} személy hozzáadva a gyűjteményhez",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} személy és {{ count2 }} csoport hozzáadva a gyűjteményhez",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} személy és {{ count2 }} csoport hozzáadva a gyűjteményhez",
-  "Switch to dark": "Switch to dark",
-  "Switch to light": "Switch to light",
+  "Switch to dark": "Váltás sötét módra",
+  "Switch to light": "Váltás világos módra",
   "Add": "Hozzáadás",
-  "Add or invite": "Add or invite",
+  "Add or invite": "Hozzáadás vagy meghívás",
   "Viewer": "Megtekintő",
   "Editor": "Szerkesztő",
-  "Suggestions for invitation": "Suggestions for invitation",
+  "Suggestions for invitation": "Javaslatok meghíváshoz",
   "No matches": "Nincs találat",
   "Can view": "Megtekintheti",
-  "Everyone in the collection": "Everyone in the collection",
-  "You have full access": "You have full access",
+  "Everyone in the collection": "Mindenki a gyűjteményben",
+  "You have full access": "Teljes hozzáféréssel rendelkezel",
   "Created the document": "Dokumentum létrehozása",
-  "Other people": "Other people",
-  "Other workspace members may have access": "Other workspace members may have access",
-  "This document may be shared with more workspace members through a parent document or collection you do not have access to": "This document may be shared with more workspace members through a parent document or collection you do not have access to",
+  "Other people": "Más emberek",
+  "Other workspace members may have access": "A munkaterület más tagjainak is hozzáférése lehet",
+  "This document may be shared with more workspace members through a parent document or collection you do not have access to": "Ez a dokumentum megosztható a munkaterület más tagjaival is egy szülődokumentumon vagy szülőgyűjteményen keresztül",
   "Access inherited from collection": "Access inherited from collection",
   "{{ userName }} was removed from the document": "{{ userName }} eltávolítva a dokumentumból",
   "Could not remove user": "Nem lehet a felhasználót eltávolítani",
