--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Déplacer dans <em>{{ location }}</em>",
   "Search collections & documents": "Rechercher dans les collections et documents",
   "No results found": "Aucun résultat",
+  "Document options": "Options de document",
   "New": "Nouveau",
   "Only visible to you": "Visible uniquement pour vous",
   "Draft": "Brouillon",
@@ -541,6 +542,7 @@
   "Video": "Vidéo",
   "None": "Abc",
   "Delete embed": "Supprimer l'intégration",
+  "Rename": "Renommer",
   "Could not import file": "Le fichier n'a pas pu être importé",
   "Unsubscribed from document": "Se désabonner du document",
   "Unsubscribed from collection": "Désabonné de la collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "Tri de A à Z",
   "Z-A sort": "Tri de Z à A",
   "Manual sort": "Tri manuel",
-  "Rename": "Renommer",
   "Collection menu": "Menu de la collection",
   "Comment options": "Options des commentaires",
   "Enable viewer insights": "Activer le visualisateur d'analyses",
   "Enable embeds": "Activer les intégrations",
-  "Document options": "Options de document",
   "File": "Fichier",
-  "Group member options": "Options des membres du groupe",
   "Group members": "Membres du groupe",
   "Edit group": "Modifier le groupe",
   "Delete group": "Supprimer le groupe",
@@ -983,6 +982,7 @@
   "Search people": "Rechercher des personnes",
   "No people matching your search": "Aucune personne ne correspond à votre recherche",
   "No people left to add": "Plus aucune personne à ajouter",
+  "Member": "Member",
   "Date created": "Créé le",
   "Crop Image": "Rogner l'image",
   "Crop image": "Rogner l’image",
