fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Másolás a {{ location }} helyre",
   "Search collections & documents": "Keresés a gyűteményekben és dokumentumokban",
   "No results found": "Nincs találat",
+  "Document options": "Dokumentum beállítások",
   "New": "Új",
   "Only visible to you": "Csak az Ön számára látható",
   "Draft": "Piszkozat",
@@ -541,6 +542,7 @@
   "Video": "Videó",
   "None": "Nincs",
   "Delete embed": "Delete embed",
+  "Rename": "Átnevezés",
   "Could not import file": "Fájl importálása nem lehetséges",
   "Unsubscribed from document": "Leiratkozott a dokumentumról",
   "Unsubscribed from collection": "Leiratkozott a dokumentumról",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "Egyedi sorrend",
-  "Rename": "Átnevezés",
   "Collection menu": "Gyűjtemény menü",
   "Comment options": "Hozzászólás beállítások",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Beágyazások engedélyezése",
-  "Document options": "Dokumentum beállítások",
   "File": "File",
-  "Group member options": "Csoport tagság opciók",
   "Group members": "Csoport tagjai",
   "Edit group": "Csoport szerkesztése",
   "Delete group": "Csoport törlése",
@@ -983,6 +982,7 @@
   "Search people": "Emberek keresése",
   "No people matching your search": "Egy személy sem felel meg a keresési szempontoknak",
   "No people left to add": "Nincs több hozzáadható személy",
+  "Member": "Member",
   "Date created": "Létrehozás dátuma",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
