fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Skopiuj do <em>{{ location }}</em>",
   "Search collections & documents": "Przeszukaj kolekcje i dokumenty",
   "No results found": "Nie znaleziono wyników",
+  "Document options": "Opcje dokumentu",
   "New": "Nowe",
   "Only visible to you": "Widoczne tylko dla Ciebie",
   "Draft": "Szkic",
@@ -541,6 +542,7 @@
   "Video": "Wideo",
   "None": "Brak",
   "Delete embed": "Usuń osadzenie",
+  "Rename": "Zmień nazwę",
   "Could not import file": "Nie można zaimportować pliku",
   "Unsubscribed from document": "Wypisano z dokumentu",
   "Unsubscribed from collection": "Zrezygnowano z subskrypcji kolekcji",
@@ -562,14 +564,11 @@
   "A-Z sort": "Sortuj A-Z",
   "Z-A sort": "Sortuj Z-A",
   "Manual sort": "Sortowanie ręczne",
-  "Rename": "Zmień nazwę",
   "Collection menu": "Menu kolekcji",
   "Comment options": "Opcje komentarza",
   "Enable viewer insights": "Włącz informacje o oglądających",
   "Enable embeds": "Włącz osadzanie",
-  "Document options": "Opcje dokumentu",
   "File": "Plik",
-  "Group member options": "Opcje członka grupy",
   "Group members": "Członkowie grupy",
   "Edit group": "Edytuj grupę",
   "Delete group": "Usuń grupę",
@@ -983,6 +982,7 @@
   "Search people": "Szukaj osób",
   "No people matching your search": "Brak osób pasujących do Twojego wyszukiwania",
   "No people left to add": "Brak osób do dodania",
+  "Member": "Member",
   "Date created": "Data utworzenia",
   "Crop Image": "Przytnij obraz",
   "Crop image": "Przytnij obraz",
