--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "<em>{{ location }}</em>로 복사",
   "Search collections & documents": "컬렉션 및 문서 검색",
   "No results found": "결과가 없습니다.",
+  "Document options": "문서 옵션",
   "New": "신규",
   "Only visible to you": "나에게만 보임",
   "Draft": "임시보관",
@@ -541,6 +542,7 @@
   "Video": "동영상",
   "None": "없음",
   "Delete embed": "임베드 삭제",
+  "Rename": "이름변경",
   "Could not import file": "파일을 가져올 수 없음",
   "Unsubscribed from document": "문서 구독이 취소됨",
   "Unsubscribed from collection": "컬렉션 구독 취소",
@@ -562,14 +564,11 @@
   "A-Z sort": "오름차순",
   "Z-A sort": "내림차순",
   "Manual sort": "수동 정렬",
-  "Rename": "이름변경",
   "Collection menu": "컬렉션 메뉴",
   "Comment options": "댓글 옵션",
   "Enable viewer insights": "뷰어 정보 활성화",
   "Enable embeds": "임베드 활성화",
-  "Document options": "문서 옵션",
   "File": "파일",
-  "Group member options": "그룹 멤버 옵션",
   "Group members": "그룹 구성원",
   "Edit group": "그룹 수정",
   "Delete group": "그룹 삭제",
@@ -983,6 +982,7 @@
   "Search people": "사용자 검색",
   "No people matching your search": "찾으시는 사용자가 없습니다.",
   "No people left to add": "추가할 사용자가 없습니다",
+  "Member": "Member",
   "Date created": "생성 일자",
   "Crop Image": "이미지 자르기",
   "Crop image": "이미지 자르기",
