fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -40,8 +40,8 @@
   "Copy ID": "ID kopieren",
   "Clear IndexedDB cache": "IndexedDB Cache löschen",
   "IndexedDB cache cleared": "IndexedDB Cache gelöscht",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "Lokalen Speicher löschen",
+  "Local storage cleared": "Lokaler Speicher gelöscht",
   "Toggle debug logging": "Diagnoseprotokolle aktivieren/deaktivieren",
   "Debug logging enabled": "Diagnoseprotokolle aktiviert",
   "Debug logging disabled": "Diagnoseprotokolle deaktiviert",
@@ -109,7 +109,7 @@
   "You have left the shared document": "Sie haben das geteilte Dokument verlassen",
   "Could not leave document": "Dokument konnte nicht verlassen werden",
   "Apply template": "Vorlage übernehmen",
-  "Disconnect analytics": "Disconnect analytics",
+  "Disconnect analytics": "Analytics trennen",
   "Home": "Startseite",
   "Drafts": "Entwürfe",
   "Search": "Suche",
@@ -211,8 +211,8 @@
   "Install now": "Jetzt installieren",
   "Disconnect": "Trennen",
   "Disconnecting": "Trenne",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sind Sie sicher, dass Sie die <em>{{ service }}</em> Integration trennen möchten?",
+  "This will stop sending analytics events to the configured instance.": "Dies stoppt das Senden von Analyseereignissen an die konfigurierte Instanz.",
   "Deleted Collection": "Gelöschte Sammlung",
   "Untitled": "Ohne Titel",
   "Unpin": "Lospinnen",
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Kopieren nach <em>{{ location }}</em>",
   "Search collections & documents": "Sammlungen und Dokumente durchsuchen",
   "No results found": "Keine Ergebnisse gefunden",
+  "Document options": "Dokument-Einstellungen",
   "New": "Neu",
   "Only visible to you": "Nur für Sie sichtbar",
   "Draft": "Entwurf",
@@ -257,7 +258,7 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Leider konnte ein Teil der Software nicht geladen werden weil der Inhalt sich inzwischen geändert hat oder eine Abfrage nicht erfolgreich abgeschlossen werden konnte. Bitte neu laden.",
   "Reload": "Neu Laden",
   "Something Unexpected Happened": "Ein unerwarteter Fehler ist aufgetreten",
-  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "Ein Fehler ist in letzter Zeit mehrfach aufgetreten. Wenn er weiterhin auftritt, versuchen Sie bitte den Cache zu löschen oder verwenden Sie einen anderen Browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Entschuldigung, ein Fehler ist aufgetreten{{notified}}. Bitte versuche die Seite neu zu laden, es könnte inzwischen wieder funktionieren.",
   "our engineers have been notified": "unsere Entwickler wurden benachrichtigt",
   "Clear cache + reload": "Cache leeren + neu laden",
@@ -389,7 +390,7 @@
   "Active <1></1> ago": "Aktiv vor <1></1>",
   "Never signed in": "Nie angemeldet",
   "Leave": "Verlassen",
-  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Jeder mit diesem Link kann darauf zugreifen, da die übergeordnete Sammlung, <2>{sharedParent.sourceTitle}</2>, geteilt wird",
   "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Jeder mit dem Link kann darauf zugreifen, da das übergeordnete Dokument, <2>{sharedParent.sourceTitle}</2>, geteilt wird",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Verschachtelte Dokumente werden nicht im Web geteilt. Schalten Sie die Freigabe um, um den Zugriff zu ermöglichen, dies wird das Standardverhalten in Zukunft sein",
   "{{ userName }} was added to the document": "{{ userName }} wurde dem Dokument hinzugefügt",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "Keine",
   "Delete embed": "Einbindung löschen",
+  "Rename": "Umbenennen",
   "Could not import file": "Datei konnte nicht importiert werden",
   "Unsubscribed from document": "Dokument nicht abonniert",
   "Unsubscribed from collection": "Von der Kollektion abgemeldet",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z-Sortierung",
   "Z-A sort": "Z-A-Sortierung",
   "Manual sort": "Manuelle Sortierung",
-  "Rename": "Umbenennen",
   "Collection menu": "Kollektionsmenü",
   "Comment options": "Kommentar Optionen",
   "Enable viewer insights": "Leser Statistiken aktivieren",
   "Enable embeds": "Einbettungen aktivieren",
-  "Document options": "Dokument-Einstellungen",
   "File": "Datei",
-  "Group member options": "Optionen für Gruppenmitglieder",
   "Group members": "Gruppenmitglieder",
   "Edit group": "Gruppe bearbeiten",
   "Delete group": "Gruppe löschen",
@@ -605,7 +604,7 @@
   "mentioned you in": "erwähnte dich in",
   "left a comment on": "hat einen Kommentar geschrieben zu",
   "resolved a comment on": "löste einen Kommentar auf",
-  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
+  "reacted {{ emoji }} to your comment on": "reagierte mit {{ emoji }} auf Ihren Kommentar",
   "shared": "geteilt",
   "invited you to": "hat dich eingeladen zu",
   "Choose a date": "Datum auswählen",
@@ -690,17 +689,17 @@
   "Created": "Erstellt",
   "Imported from {{ source }}": "Importiert von {{ source }}",
   "Stats": "Statistiken",
-  "{{ number }} minute read": "{{ number }} minute read",
-  "{{ number }} words": "{{ number }} word",
-  "{{ number }} words_plural": "{{ number }} words",
-  "{{ number }} characters": "{{ number }} character",
-  "{{ number }} characters_plural": "{{ number }} characters",
+  "{{ number }} minute read": "{{ number }} Minuten Lesezeit",
+  "{{ number }} words": "{{ number }} Wort",
+  "{{ number }} words_plural": "{{ number }} Wörter",
+  "{{ number }} characters": "{{ number }} Zeichen",
+  "{{ number }} characters_plural": "{{ number }} Zeichen",
   "{{ number }} emoji": "{{ number }} Emojis",
   "No text selected": "Kein Text ausgewählt",
-  "{{ number }} words selected": "{{ number }} word selected",
-  "{{ number }} words selected_plural": "{{ number }} words selected",
-  "{{ number }} characters selected": "{{ number }} character selected",
-  "{{ number }} characters selected_plural": "{{ number }} characters selected",
+  "{{ number }} words selected": "{{ number }} Wort ausgewählt",
+  "{{ number }} words selected_plural": "{{ number }} Wörter ausgewählt",
+  "{{ number }} characters selected": "{{ number }} Zeichen ausgewählt",
+  "{{ number }} characters selected_plural": "{{ number }} Zeichen ausgewählt",
   "Contributors": "Mitwirkende",
   "Creator": "Ersteller",
   "Last edited": "Zuletzt bearbeitet",
@@ -887,7 +886,7 @@
   "integrations": "Integrationen",
   "notifications": "Benachrichtigungen",
   "reactions": "Reaktionen",
-  "pins": "pins",
+  "pins": "Pins",
   "shares": "Freigaben",
   "users": "Benutzer",
   "teams": "Teams",
@@ -983,6 +982,7 @@
   "Search people": "Personen suchen",
   "No people matching your search": "Keine Personen, die Ihrer Suche entsprechen",
   "No people left to add": "Keine Personen übrig zum Hinzufügen",
+  "Member": "Member",
   "Date created": "Erstellungsdatum",
   "Crop Image": "Bild zuschneiden",
   "Crop image": "Bild zuschneiden",
@@ -1074,8 +1074,8 @@
   "Mentioned": "Erwähnt",
   "Receive a notification when someone mentions you in a document or comment": "Erhalten Sie eine Benachrichtigung, wenn jemand Sie in einem Dokument oder einem Kommentar erwähnt",
   "Receive a notification when a comment thread you were involved in is resolved": "Benachrichtigung erhalten, wenn ein Kommentar-Thread, an dem Sie beteiligt waren, gelöst wurde",
-  "Reaction added": "Reaction added",
-  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
+  "Reaction added": "Reaktion hinzugefügt",
+  "Receive a notification when someone reacts to your comment": "Erhalten Sie eine Benachrichtigung, wenn jemand Sie in einem Kommentar erwähnt",
   "Collection created": "Kollektion erstellt",
   "Receive a notification whenever a new collection is created": "Erhalten Sie eine Benachrichtigung, wenn eine neue Kollektion erstellt wird",
   "Invite accepted": "Einladung angenommen",
