fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copiar a <em>{{ location }}</em>",
   "Search collections & documents": "Buscar en colecciones y documentos",
   "No results found": "No se encontraron resultados",
+  "Document options": "Opciones del documento",
   "New": "Nuevo",
   "Only visible to you": "Solo visible para ti",
   "Draft": "Borrador",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "Nada",
   "Delete embed": "Eliminar incrustado",
+  "Rename": "Renombrar",
   "Could not import file": "No se pudo importar el archivo",
   "Unsubscribed from document": "Desuscrito del documento",
   "Unsubscribed from collection": "Dado de baja de la colección",
@@ -562,14 +564,11 @@
   "A-Z sort": "Ordenado A-Z",
   "Z-A sort": "Ordenado Z-A",
   "Manual sort": "Orden manual",
-  "Rename": "Renombrar",
   "Collection menu": "Menú de la colección",
   "Comment options": "Opciones de los comentarios",
   "Enable viewer insights": "Habilitar estadísticas",
   "Enable embeds": "Habilitar embeds",
-  "Document options": "Opciones del documento",
   "File": "Archivo",
-  "Group member options": "Opciones de los miembros del grupo",
   "Group members": "Miembros del grupo",
   "Edit group": "Editar grupo",
   "Delete group": "Eliminar grupo",
@@ -983,6 +982,7 @@
   "Search people": "Buscar personas",
   "No people matching your search": "No hay personas que coincidan con tu búsqueda",
   "No people left to add": "No quedan personas para agregar",
+  "Member": "Member",
   "Date created": "Fecha de creación",
   "Crop Image": "Recortar imagen",
   "Crop image": "Recortar imagen",
