fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Zkopírovat do <em>{{ location }}</em>",
   "Search collections & documents": "Prohledat sbírky a dokumenty",
   "No results found": "Nebyly nalezeny žádné výsledky",
+  "Document options": "Možnosti dokumentů",
   "New": "Nový",
   "Only visible to you": "Viditelné pouze pro vás",
   "Draft": "Návrh",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Rename": "Přejmenovat",
   "Could not import file": "Soubor nelze importovat",
   "Unsubscribed from document": "Upozornění vypnuta",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "Manuální řazení",
-  "Rename": "Přejmenovat",
   "Collection menu": "Nabídka sbírek",
   "Comment options": "Nastavení komentářů",
   "Enable viewer insights": "Zapnout analytika nahlížení",
   "Enable embeds": "Povolit embed vkládání",
-  "Document options": "Možnosti dokumentů",
   "File": "File",
-  "Group member options": "Nastavení členů skupiny",
   "Group members": "Členové skupiny",
   "Edit group": "Upravit skupinu",
   "Delete group": "Odstranit skupinu",
@@ -983,6 +982,7 @@
   "Search people": "Hledat uživatele",
   "No people matching your search": "Vašemu vyhledávání neodpovídají žádní lidé",
   "No people left to add": "Nezbývají žádní lidé, které by bylo možné přidat",
+  "Member": "Member",
   "Date created": "Datum vytvoření",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
