--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
   "Search collections & documents": "Search collections & documents",
   "No results found": "Ingen resultater fundet",
+  "Document options": "Document options",
   "New": "Ny",
   "Only visible to you": "Kun synlig for dig",
   "Draft": "Udkast",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Rename": "Rename",
   "Could not import file": "Could not import file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "Manual sort",
-  "Rename": "Rename",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
   "Enable viewer insights": "Aktiver seerindsigter",
   "Enable embeds": "Enable embeds",
-  "Document options": "Document options",
   "File": "File",
-  "Group member options": "Group member options",
   "Group members": "Gruppemedlemmer",
   "Edit group": "Edit group",
   "Delete group": "Delete group",
@@ -983,6 +982,7 @@
   "Search people": "Search people",
   "No people matching your search": "No people matching your search",
   "No people left to add": "No people left to add",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
