fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "copia in",
   "Search collections & documents": "Cerca raccolte e documenti",
   "No results found": "Nessun risultato trovato",
+  "Document options": "Opzioni documento",
   "New": "Nuovo",
   "Only visible to you": "Visibile solo a te",
   "Draft": "Bozza",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "Nessuno",
   "Delete embed": "Delete embed",
+  "Rename": "Rinomina",
   "Could not import file": "Impossibile importare il file",
   "Unsubscribed from document": "Annullata l'iscrizione al documento",
   "Unsubscribed from collection": "Annullata l'iscrizione alla raccolta",
@@ -562,14 +564,11 @@
   "A-Z sort": "Ordina da A-Z",
   "Z-A sort": "Ordina da Z-A",
   "Manual sort": "Ordinamento manuale",
-  "Rename": "Rinomina",
   "Collection menu": "Menù raccolte",
   "Comment options": "Opzioni Commento",
   "Enable viewer insights": "Abilita gli approfondimenti sugli spettatori",
   "Enable embeds": "Abilita l'embedding",
-  "Document options": "Opzioni documento",
   "File": "File",
-  "Group member options": "Opzioni membri del gruppo",
   "Group members": "Membri del gruppo",
   "Edit group": "Modifica gruppo",
   "Delete group": "Elimina gruppo",
@@ -983,6 +982,7 @@
   "Search people": "Cerca persone",
   "No people matching your search": "Nessuna persona corrisponde alla tua ricerca",
   "No people left to add": "Non sono rimaste persone da aggiungere",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
