fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "<em>{{ location }}</em> にコピーする",
   "Search collections & documents": "ドキュメントやコレクションを検索する",
   "No results found": "なにも見つかりませんでした",
+  "Document options": "ドキュメントオプション",
   "New": "新規作成",
   "Only visible to you": "あなたにのみ表示されます",
   "Draft": "下書き",
@@ -541,6 +542,7 @@
   "Video": "動画",
   "None": "なし",
   "Delete embed": "Delete embed",
+  "Rename": "名前を変更",
   "Could not import file": "ファイルをインポートできませんでした",
   "Unsubscribed from document": "ドキュメントの通知を解除しました",
   "Unsubscribed from collection": "コレクションの登録を解除しました",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z ソート",
   "Z-A sort": "Z-A ソート",
   "Manual sort": "手動で並べ替え",
-  "Rename": "名前を変更",
   "Collection menu": "コレクションメニュー",
   "Comment options": "コメントオプション",
   "Enable viewer insights": "ビューアインサイトを有効にする",
   "Enable embeds": "埋め込みを有効にする",
-  "Document options": "ドキュメントオプション",
   "File": "File",
-  "Group member options": "グループメンバーオプション",
   "Group members": "グループのメンバー",
   "Edit group": "グループを編集",
   "Delete group": "グループを削除",
@@ -983,6 +982,7 @@
   "Search people": "メンバーを検索",
   "No people matching your search": "検索に一致する人は見つかりませんでした",
   "No people left to add": "追加できる人は存在しません",
+  "Member": "Member",
   "Date created": "作成日時",
   "Crop Image": "Crop Image",
   "Crop image": "画像を切り取る",
